--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <img src="https://farm8.staticflickr.com/7367/9279630825_93ca93235c_k_d.jpg" >
   <cite>Sullivan, Robert. "General Dynamics F-16 Block 30 "Fighting Falcon's"." Flickr. Yahoo!, 14 July 2013. Web. 24 May 2017. </cite>
   <p>Mauris tristique mi at magna molestie consectetur. Sed eu ligula ac justo dictum pulvinar. Praesent iaculis leo lectus, eget tristique velit rhoncus vitae. Nam ut nunc vel sem pretium mattis. Etiam auctor ligula massa, in efficitur urna ullamcorper a. Aliquam tristique lorem porta arcu mollis, in feugiat justo dignissim. Curabitur placerat lorem nisl. Pellentesque quam enim, malesuada et tempor eget, ultrices non lectus. Donec pretium nisi nec purus ultricies vestibulum. Suspendisse augue mauris, posuere eu justo sed, eleifend mattis orci. Nulla quis varius eros. Suspendisse potenti. In vehicula libero ipsum, vehicula convallis odio finibus sit amet. Donec ultrices ac sapien sit amet egestas. Nulla ante nibh, accumsan aliquam pharetra venenatis, aliquet id nisi. Pellentesque quis mauris quis odio efficitur imperdiet.</p>
-</body>
+ <img src="https://farm2.staticflickr.com/1709/23679319579_3369f226f9_k_d.jpg" alt="White: Snowy road at Tibet, China">
+  </body>
 </html>
